--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,10 @@
     <string name="h6">h6</string>
     <string name="h7">h7</string>
     <string name="h8">h8</string>
+    <string name="game">Game</string>
+    <string name="stats">Stats</string>
+    <string name="about">About</string>
+    <string name="welcome_text">Welcome to Chess!</string>
+    <string name="start_game">Start a Game!</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
