--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="about">About</string>
     <string name="welcome_text">Welcome to Chess!</string>
     <string name="start_game">Start a Game!</string>
+    <string name="load_game">Load Game</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_fragment_content_description">A King chess piece</string>
     <string name="made_by">Made by:</string>
