Made sure all user-facing text is contained in strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
         <item>Bailey Day</item>
     </string-array>
 
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="okay">Okay</string>
+
     <string name="check">Check!</string>
     <string name="checkmate">Checkmate, %1$s wins </string>
     <string-array name="piece_colors">
@@ -27,6 +31,28 @@
 
     <string name="prev_game_ended">The previous game has ended, starting a new one</string>
     <string name="prev_game_loaded">Previous game loaded</string>
+
+    <string-array name="piece_display_names">
+        <item>White Pawn</item>
+        <item>White Knight</item>
+        <item>White Rook</item>
+        <item>White Bishop</item>
+        <item>White Queen</item>
+        <item>White King</item>
+        <item>Black Pawn</item>
+        <item>Black Knight</item>
+        <item>Black Rook</item>
+        <item>Black Bishop</item>
+        <item>Black Queen</item>
+        <item>Black King</item>
+    </string-array>
+
+    <string name="human_moves">Human Movements</string>
+    <string name="p2_moves">Genius Robot Movements</string>
+    <string name="wins">Wins</string>
+    <string name="losses">Losses</string>
+
+    <string name="check_exit">Are you sure you want to exit?</string>
 
     <!-- These strings deserve to rot in hell, they have absolutely no purpose except to remove 64 warnings about content descriptions from fragment_game.xml -->
     <string name="a1">a1</string>
